--- a/Lab_FA3__Awit,_JT;_Deloyola,_JR.ipynb
+++ b/Lab_FA3__Awit,_JT;_Deloyola,_JR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDFaIz81C3q9cZ8i56ebJe",
+      "authorship_tag": "ABX9TyNtB/LNkNRkw92drFT7vTSH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,10 +59,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#Scatterplot of hwy vs displ\n",
         "ggplot(mpg, aes(x = displ, y = hwy)) +\n",
         "  geom_point(alpha = 0.5) +\n",
-        "  geom_smooth(method = \"lm\", se = FALSE, color = \"firebrick\") +\n",
+        "  geom_smooth(method = \"lm\", formula = y ~ x, se = FALSE, color = \"firebrick\") +\n",
         "  labs(title = \"Relationship Between Engine Displacement and Highway MPG\",\n",
         "       x = \"Engine Displacement (Liters)\",\n",
         "       y = \"Highway MPG\") +\n",
@@ -79,20 +78,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 874
+          "height": 857
         },
         "id": "bMPERYSmPFR1",
-        "outputId": "9e3163a6-06cd-4da8-a85a-bdabc9ee76fc"
+        "outputId": "5df8b8df-9490-4363-b023-258b89c4e2cc"
       },
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\u001b[1m\u001b[22m`geom_smooth()` using formula = 'y ~ x'\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
